/* 
  Localizable.strings
  MdEditor

  Created by Александр Николаев on 24.09.2024.
  
*/

"todolist" = "TodoList";
"statistics" = "Statistics";
"error" = "Error";
"ok" = "Ok";
"all" = "All";
"important" = "Important";
"regular" = "Regular";
"completed" = "Completed";
"uncompleted" = "Uncompleted";

"loginSceneAuthorization" = "Authorization";
"loginSceneLogin" = "Login";
"loginScenePassword" = "Password";
"loginSceneInvalidPassword" = "Invalid password";
"loginSceneInvalidLogin" = "Invalid login";
"loginSceneEmptyFields" = "Empty login or password fields";
"loginSceneErrorAuthorization" = "Invalid login and password";

"todolistSceneUncompleted" = "Uncompleted";
"todolistSceneCompleted" = "Completed";
"todolistSceneDeadline" = "Deadline: %@";
"todolistSceneCellId" = "cell";

"chartsSceneUncompleted_percents" = "Uncompleted: %@%%";
"chartsSceneCompletedPercents" = "Completed: %@%%";
"chartsSceneCellId" = "cell";
